@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2010,v 1.1082 2010/03/08 21:47:14 jkunz Exp $
+$NetBSD: CHANGES-2010,v 1.1083 2010/03/08 22:00:01 jkunz Exp $
 
 Changes to the packages collection and infrastructure in 2010:
 
@@ -1281,3 +1281,4 @@ Changes to the packages collection and infrastructure in 2010:
 	Updated net/p5-Net-Twitter to 3.11008 [sno 2010-03-08]
 	Updated x11/xf86-video-radeonhd to 1.3.0nb1 [snj 2010-03-08]
 	Updated x11/xf86-video-ati to 6.12.4nb1 [snj 2010-03-08]
+	Updated geography/qlandkartegt to 0.18.0 [jkunz 2010-03-08]
